# Drain3-improved

./: .gitignore  .pre-commit-config.yaml  README.md  packit.yaml  pyproject.toml  python-drain3-improved.spec
.github/: dependabot.yml
.github/workflows/: CI.yaml  publish.yml  tests.yaml
drain3/: __init__.py  drain.py  jaccard_drain.py  kafka_persistence.py  masking.py  memory_buffer_persistence.py  persistence_handler.py  redis_persistence.py  simple_profiler.py  template_miner.py  template_miner_config.py  valkey_persistence.py
examples/: drain_bigfile_demo.py  drain_stdin_demo.py
tests/: test_drain.py  test_jaccard_drain.py  test_masking.py  test_persistence.py  test_simple_profiler.py  test_template_miner.py  test_template_miner_config.py
