[project]
name = "drain3-improved"
version = "0.9.11"
description = "Persistent & streaming log template miner"
requires-python = ">=3.10"
authors = [
    { name = "IBM Research Haifa", email = "david.ohana@ibm.com" }
]
maintainers = [
  { name = "Jiri Podivin", email = "jpodivin@redhat.com" },
  { name = "Jan Matufka", email = "jmatufka@redhat.com" }
]
readme = "README.md"
license = "MIT"
keywords=['drain', 'log', 'parser', 'IBM', 'template', 'logs', 'miner']
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: System :: Monitoring',
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jsonpickle>=4.1.1",
    "cachetools>=7.0.6",
]

[project.optional-dependencies]
kafka = [
    "kafka-python>=2.3.0"
]
redis = [
    "redis>=7.4.0"
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "types-cachetools>=6.2.0.20260408",
    "types-redis>=4.6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "drain3" }
]
